--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
+    <link rel="icon"  type="image/x-icon" href="https://images.wondershare.com/pdfelement/article-resources/boss-birthday-2.jpg">
     <link rel="stylesheet" href="syle.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Birthday reader</title>
 </head>
 <body>
   <div class="card">
@@ -17,10 +18,12 @@
         <input type="number" min="1990" max="2022" id="year" placeholder="year">
     </div>
 
-    <div>
-        <span>Gender</span><br> 
-        <input type="radio" name="gender">male <br>
-        <input type="radio" name="gender">female   
+    <div class="chuchu">
+        <span>
+            <p>enter your gender</p>
+        </span>
+        <input type="radio" name="gender"><span class="span">male</span> <br>
+        <input type="radio" name="gender"><span class="span">female</span>   
     </div> <br>
     <input type="submit" value="submit" name="">
       </form>
