--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
         <span>
             <p>enter your gender</p>
         </span>
-        <input type="radio" name="gender"><span class="span">male</span> <br>
-        <input type="radio" name="gender"><span class="span">female</span>   
+        <input type="radio" name="gender">
+        <label for="male">male</label>
+        <input type="radio" name="gender">
+        <label for="female">female</label>  
     </div> <br>
     <input type="submit" value="submit" name="">
       </form>
