changed background image

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Birthday reader</title>
 </head>
 <body>
+    <div class="background">
   <div class="card">
       <form>
     <div class="inputs">
@@ -30,6 +31,7 @@
     <input type="submit" value="submit" name="">
       </form>
   </div>
-    
+  
+    </div>
 </body>
 </html>
