--- a/index.html
+++ b/index.html
@@ -9,29 +9,48 @@
     <title>Birthday reader</title>
 </head>
 <body>
-    <div class="background">
+    <section class="holder"> 
+        <input placeholder="day" id="day" type="number" />
+        <input placeholder="month" id="month" type="number" />
+        <input placeholder="year" id="year" type="number" />
+        <select name="gender" id="gender">
+          <option value="female">female</option>
+          <option value="male">male</option>
+    
+        </select>
+        <button id="btn">submit</button>
+        <div class="dayResults"></div>
+        <div class="monthResults"></div>
+        <div class="name"></div>
+    </section>
+    <!-- <div class="background">
   <div class="card">
       <form>
     <div class="inputs">
         <p>Enter your date birth</p>
-        <input type="number" min="01" max="31" id="day" placeholder="day">
-        <input type="number" min="01" max="12" id="month" placeholder="month">
-        <input type="number" min="1990" max="2022" id="year" placeholder="year">
+        <input type="number"  id="day" placeholder="day">
+        <input type="number"  id="month" placeholder="month">
+        <input type="number" id="year" placeholder="year">
     </div>
 
     <div class="chuchu">
         <span>
             <p>enter your gender</p>
         </span>
-        <input type="radio" name="gender">
-        <label for="male">male</label>
-        <input type="radio" name="gender">
-        <label for="female">female</label>  
-    </div> <br>
-    <input type="submit" value="submit" name="">
+        
+    </div> 
+    <select name="gender" id="gender">
+    <option value="female">female</option>
+    <option value="male">male</option>
+    </select>
+    <button id="btn">submit</button>
+    <div class="dayResult"></div>
+    <div class="monthResult"></div>
+    <div class="name"></div>
       </form>
   </div>
-  
-    </div>
+
+    </div> -->
+    <script src="main.js"></script>
 </body>
 </html>
