--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Birthday reader</title>
 </head>
 <body>
-    <section class="holder"> 
+    <!-- <section class="holder"> 
         <input placeholder="day" id="day" type="number" />
         <input placeholder="month" id="month" type="number" />
         <input placeholder="year" id="year" type="number" />
@@ -22,8 +22,8 @@
         <div class="dayResults"></div>
         <div class="monthResults"></div>
         <div class="name"></div>
-    </section>
-    <!-- <div class="background">
+    </section> -->
+    <div class="background">
   <div class="card">
       <form>
     <div class="inputs">
@@ -42,7 +42,7 @@
     <select name="gender" id="gender">
     <option value="female">female</option>
     <option value="male">male</option>
-    </select>
+    </select> <br>
     <button id="btn">submit</button>
     <div class="dayResult"></div>
     <div class="monthResult"></div>
@@ -50,7 +50,7 @@
       </form>
   </div>
 
-    </div> -->
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
