added small discription about the site

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
     <div class="name"></div>
       </form>
   </div>
+     
+    <div class="lufluf">
+        <h3>About the  site</h3>
+        <p>At this site you can be able to get your Akan name. Akan name are names given to Ghanians according to the months and year they were born in.</p>
+    </div>
 
     </div>
     <script src="main.js"></script>
