added a background image

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <option value="male">male</option>
     </select> <br>
     <button id="btn">submit</button>
-    <div class="dayResult"></div>
-    <div class="monthResult"></div>
-    <div class="name"></div>
       </form>
+      <div id="dayResult"></div>
+    <div id="monthResult"></div>
+    <div id="name"></div>
   </div>
      
     <div class="lufluf">
