added more styles

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon"  type="image/x-icon" href="https://images.wondershare.com/pdfelement/article-resources/boss-birthday-2.jpg">
     <link rel="stylesheet" href="syle.css">
     <meta charset="UTF-8">
@@ -32,25 +33,30 @@
     <button id="btn">submit</button>
       </form>
     <div class="name">
-      <p id="result"></p>
     </div>
   </div>
      
     <div class="lufluf">
         <h3>About the  site</h3>
-        <p>At this site you can be able to get your Akan name. Akan name are names given to Ghanians according to the months and year they were born in.</p>
-    </div>
-      <div class="footer-container">
-        <div class="footer">
-          <div class="footer-heading footer-1">
-            <h2>social media</h2>
-            <a href="#">Instagram</a><br>
-            <a href="#">Facebook</a><br>
-            <a href="#">Snapchat</a><br>
-            <a href="#">Twitter</a><br>
+        <p>This web application takes user's birthday and calculates the day of the week they were born and then depending on their genders outputs their Akan Name. Akan Names are dereived from culture Ghanian culture.
+          Frequently in Ghana children are given their first names as a day name which corresponds to the day in the week they were born.
+        </p>
+    </div>     
+          <div class="social-media">
+            <p>social media</p>
+
+            <div class="social">
+            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#"><i class="fa-brands fa-snapchat"></i></a>
+            <a href="#"><i class="fa-brands fa-twitter"></i></a>
           </div>
-        </div>
-      </div>
+          </div>
+
+            <div class="box">
+              <p>Congratulation !!! --</p>
+              <p id="result"></p>
+            </div>        
     </div>
     <script src="main.js"></script>
 </body>
